<resources>
    <string name="app_name">LeaderboardDemo</string>
    <string name="price_top">Prize \u20B95000</string>
    <string name="price_first">\u20B915500</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="second">2</string>
    <string name="secondOrdinal">nd</string>
    <string name="first">1</string>
    <string name="firstOrdinal">st</string>
    <string name="third">3</string>
    <string name="thirdOrdinal">rd</string>
    <string name="points">Points</string>
    <string name="hiw">How it works?</string>
</resources>