<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.leaderboarddemo.ui.viewmodel.MainViewModel" />

    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/toolbar_color">

        <include
            layout="@layout/app_bar_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rounded_left_right_top_white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/prizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_5dp"
                android:textColor="@color/heading_color"
                android:textStyle="bold|italic"
                android:textSize="@dimen/text_size_22sp"
                tools:text="@string/price_top" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:src="@drawable/rays" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:background="@drawable/bg_icon"
                        android:gravity="center"
                        android:paddingHorizontal="50dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-35dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/userImage2"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginEnd="@dimen/margin_15dp"
                                app:srcCompat="@drawable/user2"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/userName2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_14sp"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_marginTop="2dp"
                                tools:text="Rohit"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/pointsUser2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_12sp"
                                android:textColor="@color/white"
                                tools:text="100789 pts"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/priceUser2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_14sp"
                                android:textColor="@color/heading_color"
                                android:textStyle="bold"
                                tools:text="@string/price_first"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginTop="-20dp"
                            android:layout_marginStart="@dimen/margin_5dp"
                            >

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="70dp"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/crown_final" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/userImage1"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="-5dp"
                                app:srcCompat="@drawable/user1" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/pointsUser1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_12sp"
                                android:textColor="@color/white"
                                android:layout_marginTop="@dimen/margin_10dp"
                                tools:text="100789 pts"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/priceUser1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_14sp"
                                android:textColor="@color/heading_color"
                                android:textStyle="bold"
                                tools:text="@string/price_first"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="@dimen/margin_5dp"
                            android:layout_marginBottom="-45dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/userImage3"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/user3"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/userName3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_14sp"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_marginTop="2dp"
                                tools:text="Sneha"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/pointsUser3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_12sp"
                                android:textColor="@color/white"
                                tools:text="100789 pts"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/priceUser3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_14sp"
                                android:textColor="@color/heading_color"
                                android:textStyle="bold"
                                tools:text="@string/price_first"/>
                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/leaderboard_icon">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/secondRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/second_rank_color"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_22sp"
                        tools:text="@string/second" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/secondRankOrdinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-4dp"
                        android:textColor="@color/second_rank_color"
                        android:textSize="@dimen/text_size_16sp"
                        tools:text="@string/secondOrdinal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="-20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/first_rank_color"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_24sp"
                        tools:text="@string/first" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstRankOrdinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:textColor="@color/first_rank_color"
                        android:textSize="@dimen/text_size_16sp"
                        tools:text="@string/firstOrdinal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/thirdRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/third_rank_color"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_22sp"
                        tools:text="@string/third" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/thirdRankOrdinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-4dp"
                        android:textColor="@color/third_rank_color"
                        android:textSize="@dimen/text_size_16sp"
                        tools:text="@string/thirdOrdinal" />

                </LinearLayout>



            </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/topLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/margin_10dp"
                    android:layout_marginHorizontal="@dimen/margin_15dp"
                    android:visibility="gone"
                    android:background="@drawable/background_selected_style_16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:minWidth="50dp"
                        android:layout_gravity="center_vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/rankTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_14sp"
                            tools:text="8"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/ordinal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_12sp"
                            tools:text="th"/>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/userImage"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="@dimen/margin_5dp"
                        tools:srcCompat="@drawable/user1" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:textSize="@dimen/text_size_12sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        tools:text="Yash Bhardwaj"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/margin_15dp"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="98000 pts"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/heading_color"
                        android:layout_marginStart="@dimen/margin_15dp"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="@string/price_first"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/userItemList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_15dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fitsSystemWindows="true"
                    android:overScrollMode="never"
                    tools:itemCount="5"
                    tools:visibility="visible"
                    android:visibility="gone"
                    tools:listitem="@layout/layout_user_item" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>